feature(auth): create login and register layouts and fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
 <resources>
     <string name="app_name">Movie Catalog</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_login">Login</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_password_repeat">Repeat password</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_name">First Name</string>
+    <string name="hint_date_of_birth">Date of birth</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="already_have_account">I already have an account</string>
+
+    <string name="description_movie_catalog_logo">Movie Catalog Logo</string>
 </resources>
