--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="female">Female</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="logout">Logout</string>
     <string name="already_have_account">I already have an account</string>
 
     <string name="description_movie_catalog_logo">Movie Catalog Logo</string>
