--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,14 @@
     <string name="hint_email">Email</string>
     <string name="hint_name">First Name</string>
     <string name="hint_date_of_birth">Date of birth</string>
+    <string name="hint_gender">Gender</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="logout">Logout</string>
     <string name="loading">Loading...</string>
+    <string name="unknown_username">*Unknown username*</string>
     <string name="already_have_account">I already have an account</string>
 
     <string name="description_movie_catalog_logo">Movie Catalog Logo</string>
