feature/fix: fix collections edit, add collection movies recycler, create swipeToRefresh

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="gallery">Gallery</string>
     <string name="text_separator">•</string>
 
-    <string name="add_to_favourites">Add to favourites</string>
+    <string name="add_to_favourites">Save to collection</string>
     <string name="about_movie">About movie</string>
     <string name="genres">Genres</string>
     <string name="reviews">Reviews</string>
