--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="loading">Loading...</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
     <string name="unknown_username">*Unknown username*</string>
     <string name="already_have_account">I already have an account</string>
 
@@ -55,4 +56,7 @@
 
     <string name="unknown_movie">Unknown movie</string>
     <string name="anonymous_user">Anonymous user</string>
+    <string name="anonymous_review">Anonymous review</string>
+    <string name="make_review">Make review</string>
+    <string name="write_review">Review</string>
 </resources>
