--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="watch">Watch</string>
     <string name="gallery">Gallery</string>
     <string name="text_separator">•</string>
+    <string name="empty_collections">No collections yet</string>
 
     <string name="add_to_favourites">Save to collection</string>
     <string name="about_movie">About movie</string>
@@ -53,6 +54,7 @@
     <string name="budget">Budget</string>
     <string name="world">Budget</string>
     <string name="age_limit">Age limit</string>
+    <string name="time_unit">m.</string>
 
     <string name="unknown_movie">Unknown movie</string>
     <string name="anonymous_user">Anonymous user</string>
